(lang dune 3.17)

(name camel2d)

(generate_opam_files true)

(source
 (github mesmerizingwaft/camel2d))

(authors "mesmera <mesmera.waft@gmail.com>")

(maintainers "mesmera <mesmera.waft@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name camel2d)
 (synopsis "A 2D browser game library written in OCaml")
 (description "A 2D browser game library written in OCaml")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
